[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/sleepy-cat-font/SleepyCatRegular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/GameOverScreen.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.192157, 0.258824, 0.352941, 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[node name="GameOverScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="GameOverScreen" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
custom_styles/panel = SubResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="GameOverScreen"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/CenterContainer"]
margin_left = 390.0
margin_top = 219.0
margin_right = 633.0
margin_bottom = 381.0

[node name="GameOver" type="Label" parent="GameOverScreen/CenterContainer/VBoxContainer"]
margin_right = 243.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 3 )
text = "Game over!"

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 243.0
margin_bottom = 90.0
alignment = 1

[node name="FinalScore" type="Label" parent="GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 177.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 4 )
text = "Final Score :"
align = 1

[node name="FinalScoreValue" type="Label" parent="GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 181.0
margin_right = 194.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="RestartButton" type="Button" parent="GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 243.0
margin_bottom = 114.0
text = "Restart"

[node name="MainMenuButton" type="Button" parent="GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 243.0
margin_bottom = 138.0
text = "Back to Main Menu"

[node name="QuitButton" type="Button" parent="GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 243.0
margin_bottom = 162.0
text = "Quit"

[connection signal="pressed" from="GameOverScreen/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="GameOverScreen/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="GameOverScreen/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
